--- a/organization-service.properties
+++ b/organization-service.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto = update
 server.port = 8083
 
 eureka.instance.client.server.url.defaultZone = http://localhost:8761/eureka/
+
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
