--- a/department-service.properties
+++ b/department-service.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.instance.client.server.url.defaultZone = http://localhost:8761/eureka/
 
 spring.boot.message = Hello, Department Service Spring Cloud Bus Demo
+
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
