--- a/employee-service.properties
+++ b/employee-service.properties
@@ -10,3 +10,6 @@ server.port=8081
 eureka.instance.client.server.url.defaultZone=http://localhost:8761/eureka/
 
 spring.boot.message = Hello, Employee Service Spring Cloud Bus Demo
+
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
